[package]
edition = "2021"
name = "scheduler-edf-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

rp-pico = "0.7"
fugit = { version = "0.3.7", features = ["defmt"] }
embedded-hal = "0.2.5"
defmt = "0.3.8"
defmt-rtt = "0.4.1"

[build-dependencies]
cc = "1.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug-assertions = true
debug = 2
opt-level = 2

# cargo build/run --release
[profile.release]
debug = 0
opt-level = 1
